# robosense_calibration_extrinsic

./: CMakeLists.txt  CPPLINT.cfg  README.md  README_CN.md  cspell.json  package.xml
config/: lidar_to_arm_calib_config.yaml  lidar_to_base_calib_config.yaml  test_lidar_calibration.yaml
config/default_config/: registration_config.yaml
include/calibration/: base_calibration.h  robotic_arm_calibration.h  sensor_calibration.h
include/common/: common_function.h  common_variable.h
node/: hand_eye_test.cpp  sensor_to_arm_calibration_node.cpp  sensor_to_body_calibration_node.cpp
rviz/: sensor_to_arm.rviz
src/calibration/: base_calibration.cpp  robotic_arm_calibration.cpp  sensor_calibration.cpp
src/common/: common_function.cpp
